<resources>
    <string name="app_name">Yanxiang Jia - CoffeeApp03</string>
    <string name="name_Field"></string>
    <string name="toppings">Toppings</string>
    <string name="title">Your Order Details</string>
    <string name="displayMessage"></string>
    <string name="emailButton">Send Email</string>
    <string name="saveData">SAVE DATA</string>
    <string name="salesReprot">SALES REPORT</string>
    <string name="reOrder">NEW ORDER</string>


</resources>